--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "express": "^4.17.1",
     "if-env": "^1.0.4",
     "mongoose": "^5.11.9",
+    "react-router-dom": "^5.2.0",
     "socket.io": "^3.0.4"
   },
   "devDependencies": {
