--- a/package.json
+++ b/package.json
@@ -28,7 +28,9 @@
     "axios": "^0.21.1",
     "express": "^4.17.1",
     "if-env": "^1.0.4",
-    "mongoose": "^5.11.9"
+    "mongoose": "^5.11.9",
+    "react-router-dom": "^5.2.0",
+    "socket.io": "^3.0.4"
   },
   "devDependencies": {
     "concurrently": "^5.3.0",
