--- a/package.json
+++ b/package.json
@@ -26,11 +26,14 @@
   "homepage": "https://github.com/Andrea-Boyd/Project-3#readme",
   "dependencies": {
     "axios": "^0.21.1",
-    "bcrypt": "^5.0.0",
+    "bcryptjs": "^2.4.3",
+    "connect-flash": "^0.1.1",
     "express": "^4.17.1",
+    "express-session": "^1.17.1",
     "if-env": "^1.0.4",
     "mongoose": "^5.11.9",
     "passport": "^0.4.1",
+    "passport-local": "^1.0.0",
     "react-router-dom": "^5.2.0",
     "socket.io": "^3.0.4"
   },
