--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "passport": "^0.4.1",
     "passport-local": "^1.0.0",
     "react-router-dom": "^5.2.0",
+    "react-toastify": "^6.2.0",
     "socket.io": "^3.0.4"
   },
   "devDependencies": {
