--- a/package.json
+++ b/package.json
@@ -27,15 +27,17 @@
   "dependencies": {
     "axios": "^0.21.1",
     "bcrypt": "^5.0.0",
-    "bcryptjs": "^2.4.3",
     "connect-flash": "^0.1.1",
     "express": "^4.17.1",
     "express-session": "^1.17.1",
     "if-env": "^1.0.4",
+    "install": "^0.13.0",
     "mongoose": "^5.11.9",
+    "npm": "^6.14.11",
     "passport": "^0.4.1",
     "passport-local": "^1.0.0",
     "react-router-dom": "^5.2.0",
+    "reactjs-popup": "^2.0.4",
     "socket.io": "^3.0.4"
   },
   "devDependencies": {
