--- a/package.json
+++ b/package.json
@@ -36,7 +36,8 @@
     "passport-local": "^1.0.0",
     "react-router-dom": "^5.2.0",
     "react-toastify": "^6.2.0",
-    "socket.io": "^3.0.4"
+    "socket.io": "^3.0.4",
+    "uuid": "^8.3.2"
   },
   "devDependencies": {
     "concurrently": "^5.3.0",
