--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "axios": "^0.21.1",
     "bcrypt": "^5.0.0",
     "connect-flash": "^0.1.1",
+    "connect-mongo": "^3.2.0",
     "express": "^4.17.1",
     "express-session": "^1.17.1",
     "if-env": "^1.0.4",
