--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "connect-mongo": "^3.2.0",
     "cookie-parser": "^1.4.5",
     "cors": "^2.8.5",
+    "emoji-picker-react": "^3.3.0",
     "express": "^4.17.1",
     "express-session": "^1.17.1",
     "if-env": "^1.0.4",
@@ -41,8 +42,8 @@
     "passport": "^0.4.1",
     "passport-local": "^1.0.0",
     "react-router-dom": "^5.2.0",
-    "reactjs-popup": "^2.0.4",
     "react-toastify": "^6.2.0",
+    "reactjs-popup": "^2.0.4",
     "socket.io": "^3.0.4",
     "uuid": "^8.3.2"
   },
